src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Declarer_un_SAV_en_creation__c</fullName>
        <formula>IF( $Organization.Id = $Label.ID_ORG , 
HYPERLINK(&quot;http://&quot;&amp;$Label.Fleet_Manager&amp;&quot;.revers.io/#/app/requests/createsav?externalref2=&quot;+Account.Reference_internationale__c+&quot;&amp;language=fr-FR&quot;, $Label.Click_Here ), 
$Label.Lien_Non_Dispo)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Déclarer un SAV en création</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demande_visite_animateur__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Il s’agit uniquement d’un indice permettant de rappeler à l’agent lors de son prochain traitement des étapes déjà accomplies.</description>
        <inlineHelpText>Si vous avez déjà effectué cette étape, veuillez décocher la case.</inlineHelpText>
        <label>Demande visite animateur</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Derniere_synchronisation__c</fullName>
        <formula>Account.Derniere_synchronisation_statut__c</formula>
        <label>Dernière synchronisation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <formula>Anomalie__r.Links_to_PDA__c</formula>
        <label>Device</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disponibilite_Pudo__c</fullName>
        <formula>Account.DisponibiliteFormule__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disponibilité Pudo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dur_e_totale_d_indisponibilit__c</fullName>
        <formula>Indispo_Date_Fin__c  -  Indispo_Date_Debut__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Durée totale d&apos;indisponibilité</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effectuer_une_enquete_de_voisinage__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Il s’agit uniquement d’un indice permettant de rappeler à l’agent lors de son prochain traitement des étapes déjà accomplies.</description>
        <inlineHelpText>Si vous avez déjà effectué cette étape, veuillez décocher la case.</inlineHelpText>
        <label>Effectuer une enquête de voisinage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Envoi_d_un_message_PDA_courrier_email__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Il s’agit uniquement d’un indice permettant de rappeler à l’agent lors de son prochain traitement des étapes déjà accomplies.</description>
        <inlineHelpText>Si vous avez déjà effectué cette étape, veuillez décocher la case.</inlineHelpText>
        <label>Envoi d’un message PDA/courrier/email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Etape_de_traitement__c</fullName>
        <defaultValue>$Label.Etape_de_traitement</defaultValue>
        <description>Avant de procéder à d’éventuelles actions, vérifier que le relais réceptionne correctement ses colis depuis Visucolis.
Ci-dessous les étapes de traitement possibles :</description>
        <label>Etape de traitement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Etat_6_Suggere__c</fullName>
        <description>Champ technique utilisé dans les vues de listes des requêtes.</description>
        <formula>AND(
         (Etat_Pudo__c = &quot;6&quot;),
    OR(
           (Mode__c=&quot;730&quot;),
           (Mode__c=&quot;740&quot;)
           ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Etat 6 Suggéré</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Etat_Pudo__c</fullName>
        <formula>text( Account.Etat__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Etat Pudo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Etat_Type_TECH__c</fullName>
        <description>Champ technique utilisé dans les vues de listes des requêtes.</description>
        <formula>AND( 
        OR(
              text (Account.Type)=&quot;2&quot;,
               text (Account.Type)=&quot;21&quot;,
               text (Account.Type)=&quot;-3&quot;,
                text (Account.Type)=&quot;3&quot;
                                       ),
              
          
          
               
         OR(
              text (Account.Etat__c)=&quot;2&quot;,
              text(Account.Etat__c)=&quot;4&quot;,
              text(Account.Etat__c)=&quot;5&quot;,
               text(Account.Etat__c)=&quot;6&quot;
                                                   )
               
               )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Etat_Type_TECH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Heure_de_rappel_planifiee__c</fullName>
        <label>Heure de rappel planifiée</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>ID_PUDO_REF__c</fullName>
        <formula>Account.Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Référence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_PUDO__c</fullName>
        <formula>Account.Reference_internationale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Référence internationale</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indispo_Date_Debut__c</fullName>
        <formula>Indisponibilite__r.Date_de_debut__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date de début d&apos;indisponibilité</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Indispo_Date_Fin__c</fullName>
        <formula>Indisponibilite__r.Date_de_fin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date de fin d&apos;indisponibilité</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Indisponibilite__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Indisponibilité</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Conge_Indispo__c.Nom_du_compte__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Conge_Indispo__c</referenceTo>
        <relationshipLabel>Requêtes</relationshipLabel>
        <relationshipName>Requ_tes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Indisponibilite_en_cours__c</fullName>
        <formula>IF( ISBLANK(  Account.Indisponibilite_en_cours__c  ),&quot;0&quot;,&quot;1&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indisponibilité en cours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Injoignabilite_en_cours_TECH__c</fullName>
        <description>Indicateur pour filtre vues de listes 21 (Injoignable - En attente d&apos;attribution standard) et 22 (Injoignable - En attente d&apos;attribution partenaire)</description>
        <formula>IF( Account.Injoignabilite_en_cours_TECH__c=TRUE,  
TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Injoignabilité en cours TECH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Injoignabilite_en_cours__c</fullName>
        <description>Champ technique - pour les filtres dans les vues de listes.</description>
        <formula>IF(     AND
                 (Indisponibilite__r.Injoignable__c=TRUE,
                 CONTAINS(Subject,&quot;Indisponibilité&quot;)),
         TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Injoignabilité en cours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>J_Vues_de_llistes__c</fullName>
        <description>Champ technique utilisé comme filtre dans les vues de listes Requêtes.</description>
        <formula>OR( AND(RecordType.DeveloperName  &lt;&gt;  &quot;PUS_FR_IndisponibilitePBOperationnel_AvecDateFin&quot;,
        Rappel_Jplus2__c = false,
        Rappel_Jplus3__c = false),

AND (RecordType.DeveloperName = &quot;PUS_FR_IndisponibilitePBOperationnel_AvecDateFin&quot;,
         Indispo_Date_Fin__c &lt;= Today ()+ 3)
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>J Vues de llistes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jours_restants_avant_la_fin_d_indisponib__c</fullName>
        <formula>Indispo_Date_Fin__c-Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jours restants avant la fin d&apos;indispo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Langue_parlee_dans_le_PUDO__c</fullName>
        <formula>IF ( INCLUDES ( Account.Langues_parlees_sur_le_relais__c , &quot;Anglais&quot; ), $Label.Langue_parlee_sur_relais_Anglais + &quot;;&quot; ,null ) + &quot; &quot; +
IF ( INCLUDES ( Account.Langues_parlees_sur_le_relais__c , &quot;Français&quot; ), $Label.Langue_parlee_sur_relais_Francais + &quot;;&quot; ,null ) + &quot; &quot; +
IF ( INCLUDES ( Account.Langues_parlees_sur_le_relais__c , &quot;Hollandais&quot; ), $Label.Langue_parlee_sur_relais_Hollandais + &quot;;&quot; ,null ) + &quot; &quot; +
IF ( INCLUDES ( Account.Langues_parlees_sur_le_relais__c , &quot;Espagnol&quot; ), $Label.Langue_parlee_sur_relais_Espagnol + &quot;;&quot; ,null ) + &quot; &quot; +
IF ( INCLUDES ( Account.Langues_parlees_sur_le_relais__c , &quot;Allemand&quot; ), $Label.Langue_parlee_sur_relais_Allemand + &quot;;&quot; ,null ) + &quot; &quot; +
IF ( INCLUDES ( Account.Langues_parlees_sur_le_relais__c , &quot;Italien&quot; ), $Label.Langue_parlee_sur_relais_Italien + &quot;;&quot; ,null ) + &quot; &quot; +
IF ( INCLUDES ( Account.Langues_parlees_sur_le_relais__c , &quot;Tchèque&quot; ), $Label.Langue_parlee_sur_relais_Tcheque + &quot;;&quot; ,null ) + &quot; &quot; +
IF ( INCLUDES ( Account.Langues_parlees_sur_le_relais__c , &quot;Hongrois&quot; ), $Label.Langue_parlee_sur_relais_Hongrois + &quot;;&quot; ,null )</formula>
        <label>Langue parlée dans le PUDO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lien_vers_Consultation_Ticket_Manager__c</fullName>
        <formula>/*[Inter]*/
IF(CONTAINS($Label.RT_INT_Requete, RecordType.Id), 
   IF($Label.Consulter_Ticket_INTER == $Label.TECH_ENV_NOT_AVAILABLE, 
      HYPERLINK($Label.TECH_ENV_NOT_AVAILABLE,$Label.Click_Here), 
      HYPERLINK($Label.Consulter_Ticket_INTER+ID_PUDO_REF__c+&quot;&amp;uiculture=en-EN&quot;, 
      $Label.Click_Here)), 

/*[France only]*/
IF(CONTAINS($Label.RT_France_Requete, RecordType.Id), 
   IF($Label.Consulter_Ticket == $Label.TECH_ENV_NOT_AVAILABLE, 
      HYPERLINK($Label.TECH_ENV_NOT_AVAILABLE,$Label.Click_Here), 
      HYPERLINK($Label.Consulter_Ticket+ID_PUDO_REF__c+&quot;&amp;uiculture=fr-FR&quot;, $Label.Click_Here )),null) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consultation Ticket Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lien_vers_Creation_Ticket_Manager__c</fullName>
        <formula>/*[Inter]*/
IF(CONTAINS($Label.RT_INT_Requete, RecordType.Id), 
   IF($Label.Creer_un_ticket_INTER == $Label.TECH_ENV_NOT_AVAILABLE, 
      HYPERLINK($Label.TECH_ENV_NOT_AVAILABLE,$Label.Click_Here),
      HYPERLINK($Label.Creer_un_ticket_INTER+ID_PUDO_REF__c+&quot;&amp;uiculture=en-EN&quot;, 
      $Label.Click_Here)), 

/*[France only]*/
IF(CONTAINS($Label.RT_France_Requete, RecordType.Id), 
   IF($Label.Creer_un_ticket == $Label.TECH_ENV_NOT_AVAILABLE,
      HYPERLINK($Label.TECH_ENV_NOT_AVAILABLE,$Label.Click_Here),
      HYPERLINK($Label.Creer_un_ticket+ID_PUDO_REF__c+&quot;&amp;uiculture=fr-FR&quot;, $Label.Click_Here )),null) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Créer un ticket sur Ticket Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lien_vers_Fleet_Manager__c</fullName>
        <formula>HYPERLINK($Label.Fleet_Manager+Account.Reference_internationale__c+&quot;&amp;language=fr-FR&quot;, $Label.Click_Here )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ouvrir la fiche matérielle du PUDO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lien_vers_message_PDA__c</fullName>
        <formula>Account.Envoyer_message_PDA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lien vers message PDA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Macroprofil_de_reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Macroprofil de référence</label>
        <referenceTo>Macroprofil__c</referenceTo>
        <relationshipLabel>Requêtes</relationshipLabel>
        <relationshipName>Requetes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <formula>TEXT( Account.Mode__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nom_cause_devoye__c</fullName>
        <label>Nom de la cause du dévoyé</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cause_Devoye__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Relais fermé pendant ses heures d’ouverture</fullName>
                </value>
                <value>
                    <fullName>Relais refuse les colis</fullName>
                </value>
                <value>
                    <fullName>Relais n’a pas déclaré ses congés en temps et en heure</fullName>
                </value>
                <value>
                    <fullName>Non prévisible (sinistre, cambriolage…)</fullName>
                </value>
                <value>
                    <fullName>Passage transporteur en dehors des heures d’ouverture</fullName>
                </value>
                <value>
                    <fullName>Passage transporteur en dehors des heures d’ouverture / qualif refus</fullName>
                </value>
                <value>
                    <fullName>Impossibilité de livrer (marché, travaux…)</fullName>
                </value>
                <value>
                    <fullName>Relais en congés</fullName>
                </value>
                <value>
                    <fullName>Relais en congés et refuse les colis</fullName>
                </value>
                <value>
                    <fullName>Colis retourné en agence</fullName>
                </value>
                <value>
                    <fullName>Panne PDA</fullName>
                </value>
                <value>
                    <fullName>Surcharge</fullName>
                </value>
                <value>
                    <fullName>Mise en indisponibilité</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nom_de_l_utilisateur__c</fullName>
        <label>Nom de l&apos;utilisateur</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Missguided_Parcel__c</fullName>
        <formula>Alert__r.Number_of_Missguided_Parcel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Missguided Parcel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object_de_la_requete__c</fullName>
        <label>Objet de la requête</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anomalie de synchronisation d’un relais</fullName>
                    <label>Anomalie de synchronisation d&apos;un relais</label>
                </value>
                <value>
                    <fullName>Indisponibilité Problème opérationnel Sinistre / Travaux / Santé</fullName>
                    <label>Indisponibilité - Problème opérationnel Sinistre / Travaux / Santé</label>
                </value>
                <value>
                    <fullName>Indisponibilité Problème opérationnel Qualité de Service</fullName>
                    <label>Indisponibilité - Problème opérationnel Qualité de Service</label>
                </value>
                <value>
                    <fullName>Indisponibilité Problème PDA / Panne PDA</fullName>
                    <label>Indisponibilité - Problème PDA / Panne PDA</label>
                </value>
                <value>
                    <fullName>Indisponibilité Problème PDA / Problème de synchronisation</fullName>
                    <label>Indisponibilité - Problème PDA / Problème de synchronisation</label>
                </value>
                <value>
                    <fullName>Indisponibilité problème opérationnel - Injoignabilité</fullName>
                </value>
                <value>
                    <fullName>Démarrage d&apos;activité</fullName>
                </value>
                <value>
                    <fullName>Relais sans formation avec moyens de scans associés</fullName>
                </value>
                <value>
                    <fullName>Relais actif avec plusieurs moyens de scan associés</fullName>
                </value>
                <value>
                    <fullName>Les relais actifs avec terme contrat non respecté</fullName>
                </value>
                <value>
                    <fullName>Les Congés du relais</fullName>
                </value>
                <value>
                    <fullName>Relais inactif avec moyens de scan associés</fullName>
                </value>
                <value>
                    <fullName>Relais actif sans moyen de scan associé</fullName>
                </value>
                <value>
                    <fullName>Les horaires insuffisants du relais</fullName>
                </value>
                <value>
                    <fullName>Indisponibilité Problème opérationnel Anomalie colis</fullName>
                    <isActive>false</isActive>
                    <label>Indisponibilité Problème opérationnel Anomalie colis</label>
                </value>
                <value>
                    <fullName>Relais actif sans formation avec moyen de scan associé</fullName>
                    <isActive>false</isActive>
                    <label>Relais actif sans formation avec moyen de scan associé</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operateur__c</fullName>
        <formula>text(Account.Operateur_Global__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opérateur</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PU360__c</fullName>
        <formula>HYPERLINK(&quot;http://&quot;&amp;$Label.PU360&amp;&quot;/GestionAnomalies.aspx?InternationalSiteId=&quot;+Account.Reference_internationale__c, $Label.Click_Here )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PU360</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parcel_delivered__c</fullName>
        <description>Ce champ technique permet de filtrer la vue de liste En attente d&apos;attribution pour le DA.</description>
        <formula>Account.Parcel_delivered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre de colis réceptionnés</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pays__c</fullName>
        <formula>Account.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pays</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planifier_un_rappel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Planifier un rappel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Point_relais_ne_repond_pas__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Champ tech pour sortie de vue de liste et rentrée à H+2</description>
        <label>NRP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Démarrage d&apos;activité</fullName>
                </value>
                <value>
                    <fullName>Indisponibilité S/T/S</fullName>
                </value>
                <value>
                    <fullName>Indisponibilité problème PDA</fullName>
                </value>
                <value>
                    <fullName>Indisponibilité qualité de service</fullName>
                </value>
                <value>
                    <fullName>Surcharge</fullName>
                </value>
                <value>
                    <fullName>Dévoyés</fullName>
                </value>
                <value>
                    <fullName>Résiliation</fullName>
                </value>
                <value>
                    <fullName>Exclusion</fullName>
                </value>
                <value>
                    <fullName>Menaces de résiliation</fullName>
                </value>
                <value>
                    <fullName>Enquête de bienvenue</fullName>
                </value>
                <value>
                    <fullName>Enquête de satisfaction</fullName>
                </value>
                <value>
                    <fullName>Autres (avec champ libre)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Raison_d_appel__c</fullName>
        <formula>TEXT( Indisponibilite__r.Raison_d_appel__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Raison d&apos;appel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rappel_Jmoins3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Champ tech pour sortie de vue de liste et rentrée à J-3</description>
        <label>Rappel à J-3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rappel_Jplus2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Champ tech pour sortie de vue de liste et rentrée à J+2</description>
        <label>Rappel à J+2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rappel_Jplus3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Champ tech pour sortie de vue de liste et rentrée à J+3</description>
        <label>Rappel à J+3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rapport_QS__c</fullName>
        <formula>Anomalie__r.Links_to_PDA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Télécollecte</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recherche_d_infos_du_relais_sur_internet__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Il s’agit uniquement d’un indice permettant de rappeler à l’agent lors de son prochain traitement des étapes déjà accomplies.</description>
        <inlineHelpText>Si vous avez déjà effectué cette étape, veuillez décocher la case.</inlineHelpText>
        <label>Recherche d&apos;infos du relais sur internet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recrute_avec_derogation__c</fullName>
        <formula>Account.Signe_avec_moins_de_35h__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recruté avec dérogation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_colis__c</fullName>
        <label>Référence colis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_BNL__c</fullName>
        <formula>Account.Region_BNL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Région</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secteur_Region__c</fullName>
        <formula>Account.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Région</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sens_du_contact__c</fullName>
        <label>Sens du contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Entrant</fullName>
                    <default>true</default>
                    <label>Entrant</label>
                </value>
                <value>
                    <fullName>Sortant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seuil_contractuel__c</fullName>
        <formula>Account.Seuil_contractuel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seuil contractuel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signe_malgre_l_amplitude_faible__c</fullName>
        <formula>Account.Signe_malgre_l_amplitude_faible__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signé malgré l&apos;amplitude faible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sous_motif_1__c</fullName>
        <label>Sous-motif 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Actions à réaliser</fullName>
                </value>
                <value>
                    <fullName>Anomalie colis</fullName>
                </value>
                <value>
                    <fullName>Autres</fullName>
                </value>
                <value>
                    <fullName>Changement de coordonnees</fullName>
                    <label>Changement de coordonnées</label>
                </value>
                <value>
                    <fullName>Colis volumineux</fullName>
                </value>
                <value>
                    <fullName>Collecte</fullName>
                </value>
                <value>
                    <fullName>Collecte Transporteur</fullName>
                </value>
                <value>
                    <fullName>Commandes</fullName>
                </value>
                <value>
                    <fullName>Comportement du point relais</fullName>
                </value>
                <value>
                    <fullName>Congé et disponibilité du point relais</fullName>
                </value>
                <value>
                    <fullName>Contre-remboursement (COD)</fullName>
                </value>
                <value>
                    <fullName>Demande d&apos;enlèvement colis</fullName>
                </value>
                <value>
                    <fullName>Demande de retour colis</fullName>
                </value>
                <value>
                    <fullName>Dépôt</fullName>
                </value>
                <value>
                    <fullName>Dévoyés</fullName>
                </value>
                <value>
                    <fullName>Dévoyés 100% cause relais</fullName>
                </value>
                <value>
                    <fullName>Dévoyés partiels cause relais</fullName>
                </value>
                <value>
                    <fullName>Echange</fullName>
                </value>
                <value>
                    <fullName>État du colis</fullName>
                </value>
                <value>
                    <fullName>Événement grave</fullName>
                </value>
                <value>
                    <fullName>Exclusion</fullName>
                </value>
                <value>
                    <fullName>Facturation</fullName>
                </value>
                <value>
                    <fullName>Horaires</fullName>
                </value>
                <value>
                    <fullName>Indemnisation colis</fullName>
                </value>
                <value>
                    <fullName>Indisponibilité</fullName>
                </value>
                <value>
                    <fullName>Informations colis</fullName>
                </value>
                <value>
                    <fullName>Inventaire colis</fullName>
                </value>
                <value>
                    <fullName>Inventaire colis non réalisé</fullName>
                </value>
                <value>
                    <fullName>Livraison</fullName>
                </value>
                <value>
                    <fullName>Menace de résiliation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sous_motif_2__c</fullName>
        <label>Sous-motif 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sous_motif_1__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Absence de collecte avant congés</fullName>
                </value>
                <value>
                    <fullName>Absence de collecte avant Fin d&apos;activité</fullName>
                </value>
                <value>
                    <fullName>Absence de livraison</fullName>
                </value>
                <value>
                    <fullName>Absence de scan de réception</fullName>
                </value>
                <value>
                    <fullName>Adhésion à un réseau concurrent</fullName>
                </value>
                <value>
                    <fullName>Agression</fullName>
                </value>
                <value>
                    <fullName>Alerte Dévoyé</fullName>
                </value>
                <value>
                    <fullName>Alerte surcharge</fullName>
                </value>
                <value>
                    <fullName>Annonce de congés</fullName>
                </value>
                <value>
                    <fullName>Annonce de disponibilité</fullName>
                </value>
                <value>
                    <fullName>Augmentation seuil contractuel</fullName>
                </value>
                <value>
                    <fullName>augmentation seuil temporaire</fullName>
                </value>
                <value>
                    <fullName>Autre</fullName>
                </value>
                <value>
                    <fullName>Autre source</fullName>
                </value>
                <value>
                    <fullName>Avant formation</fullName>
                </value>
                <value>
                    <fullName>Cambriolage</fullName>
                </value>
                <value>
                    <fullName>Capacité de stockage insuffisant</fullName>
                </value>
                <value>
                    <fullName>Changement d&apos;horaires</fullName>
                </value>
                <value>
                    <fullName>Changement propriété facturation</fullName>
                </value>
                <value>
                    <fullName>Chargeur concurrent à mon activité</fullName>
                </value>
                <value>
                    <fullName>Code barres colis non reconnu</fullName>
                </value>
                <value>
                    <fullName>Colis a préparer</fullName>
                </value>
                <value>
                    <fullName>Colis à réceptionner</fullName>
                </value>
                <value>
                    <fullName>Colis réceptionné inconnu</fullName>
                </value>
                <value>
                    <fullName>Colis retour non remis au transporteur</fullName>
                </value>
                <value>
                    <fullName>Collecte</fullName>
                </value>
                <value>
                    <fullName>Congés/fermeture non annoncés</fullName>
                </value>
                <value>
                    <fullName>Contestation</fullName>
                </value>
                <value>
                    <fullName>Contrat non conforme</fullName>
                </value>
                <value>
                    <fullName>Création /Réinitialisation mot de passe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>